{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 313,
  "lineage": "8c2d062a-0ce8-5430-496d-b0dff8976527",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:464112109147:instance/i-0cc1dab7f619f1c6e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc1dab7f619f1c6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demoKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06d359dfedbfe9d80"
              }
            ],
            "primary_network_interface_id": "eni-06d359dfedbfe9d80",
            "private_dns": "ip-10-10-0-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.80",
            "public_ip": "35.168.1.126",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "IAC": "terraform",
                  "IAC_Version": "0.14",
                  "cloud": "aws",
                  "env": "dev",
                  "owner": "sergio",
                  "project": "infrastructure-stack",
                  "region": "Virginia"
                },
                "tags_all": {
                  "IAC": "terraform",
                  "IAC_Version": "0.14",
                  "cloud": "aws",
                  "env": "dev",
                  "owner": "sergio",
                  "project": "infrastructure-stack",
                  "region": "Virginia"
                },
                "throughput": 125,
                "volume_id": "vol-099fe03cc7825fe07",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1581863ce025067",
            "tags": {
              "Name": "apache-infrastructure-stack-dev"
            },
            "tags_all": {
              "IAC": "terraform",
              "IAC_Version": "0.14",
              "Name": "apache-infrastructure-stack-dev",
              "cloud": "aws",
              "env": "dev",
              "owner": "sergio",
              "project": "infrastructure-stack",
              "region": "Virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088b5e6e6017257db"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnet_primaria",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112109147:internet-gateway/igw-014e0cb0a03bc8575",
            "id": "igw-014e0cb0a03bc8575",
            "owner_id": "464112109147",
            "region": "us-east-1",
            "tags": {
              "Name": "igw vpc virginia"
            },
            "tags_all": {
              "IAC": "terraform",
              "IAC_Version": "0.14",
              "Name": "igw vpc virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "sergio",
              "project": "infrastructure-stack",
              "region": "Virginia"
            },
            "vpc_id": "vpc-077024c73ef2b488c"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112109147:route-table/rtb-0d76638a90bd3f2cf",
            "id": "rtb-0d76638a90bd3f2cf",
            "owner_id": "464112109147",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014e0cb0a03bc8575",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_crt vpc virginia"
            },
            "tags_all": {
              "IAC": "terraform",
              "IAC_Version": "0.14",
              "Name": "public_crt vpc virginia",
              "cloud": "aws",
              "env": "dev",
              "owner": "sergio",
              "project": "infrastructure-stack",
              "region": "Virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-077024c73ef2b488c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8ee8835c4ff9959",
            "region": "us-east-1",
            "route_table_id": "rtb-0d76638a90bd3f2cf",
            "subnet_id": "subnet-0a1581863ce025067"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet_primaria",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112109147:security-group/sg-088b5e6e6017257db",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088b5e6e6017257db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "464112109147",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "IAC": "terraform",
              "IAC_Version": "0.14",
              "Name": "allow_ssh",
              "cloud": "aws",
              "env": "dev",
              "owner": "sergio",
              "project": "infrastructure-stack",
              "region": "Virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-077024c73ef2b488c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112109147:subnet/subnet-02699705fc71ff8cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02699705fc71ff8cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "464112109147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private_subnet_temp",
              "name": "private_subnet"
            },
            "tags_all": {
              "IAC": "terraform",
              "IAC_Version": "0.14",
              "Name": "private_subnet_temp",
              "cloud": "aws",
              "env": "dev",
              "name": "private_subnet",
              "owner": "sergio",
              "project": "infrastructure-stack",
              "region": "Virginia"
            },
            "vpc_id": "vpc-077024c73ef2b488c"
          },
          "dependencies": [
            "aws_subnet.public_subnet_primaria",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_primaria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112109147:subnet/subnet-0a1581863ce025067",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1581863ce025067",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "464112109147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public_subnet_temp",
              "name": "public_subnet-infrastructure-stack-dev"
            },
            "tags_all": {
              "IAC": "terraform",
              "IAC_Version": "0.14",
              "Name": "public_subnet_temp",
              "cloud": "aws",
              "env": "dev",
              "name": "public_subnet-infrastructure-stack-dev",
              "owner": "sergio",
              "project": "infrastructure-stack",
              "region": "Virginia"
            },
            "vpc_id": "vpc-077024c73ef2b488c"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112109147:vpc/vpc-077024c73ef2b488c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0edcb780615f95deb",
            "default_route_table_id": "rtb-0ca24e5431dd412fb",
            "default_security_group_id": "sg-07da91804d3b8401a",
            "dhcp_options_id": "dopt-068276911c18d093b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-077024c73ef2b488c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca24e5431dd412fb",
            "owner_id": "464112109147",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc_virginia",
              "name": "vpc_virginia-infrastructure-stack-dev"
            },
            "tags_all": {
              "IAC": "terraform",
              "IAC_Version": "0.14",
              "Name": "vpc_virginia",
              "cloud": "aws",
              "env": "dev",
              "name": "vpc_virginia-infrastructure-stack-dev",
              "owner": "sergio",
              "project": "infrastructure-stack",
              "region": "Virginia"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].Virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:464112109147:security-group-rule/sgr-050c7ab5259571e06",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-050c7ab5259571e06",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-088b5e6e6017257db",
            "security_group_rule_id": "sgr-050c7ab5259571e06",
            "tags": null,
            "tags_all": {
              "IAC": "terraform",
              "IAC_Version": "0.14",
              "cloud": "aws",
              "env": "dev",
              "owner": "sergio",
              "project": "infrastructure-stack",
              "region": "Virginia"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    }
  ]
}